# WebApp_test

./: Cargo.toml  index.html
commands/: example.json
src/: app.rs  main.rs  navbar.rs  web.rs
